# kazan-express-test-task

./: README.md  experiments.ipynb  pyproject.toml  result.parquet  run.py
src/data_loaders/: data_loaders.py
src/data_preprocessors/: preprocessors.py
src/metrics/: metrics.py
